--- a/asset/pages/cart.html
+++ b/asset/pages/cart.html
@@ -216,6 +216,8 @@
         // Load Header/Footer from shared components directory
         fetch('../component/header.html').then(r => r.text()).then(d => {
             document.getElementById('header').innerHTML = d;
+            // Initialize mobile menu after header is loaded
+            initializeMobileMenu();
             updateCartBadge();
         });
         fetch('../component/footer.html').then(r => r.text()).then(d => document.getElementById('footer').innerHTML = d);
