--- a/asset/pages/services.html
+++ b/asset/pages/services.html
@@ -163,12 +163,19 @@
         function loadComponent(id, file) {
             fetch(file)
                 .then(res => res.text())
-                .then(data => document.getElementById(id).innerHTML = data);
+                .then(data => {
+                    document.getElementById(id).innerHTML = data;
+                    // Initialize mobile menu after header is loaded
+                    if (id === 'header') {
+                        setTimeout(() => {
+                            initializeMobileMenu();
+                            updateCartBadge();
+                        }, 50);
+                    }
+                });
         }
         loadComponent('header', '../component/header.html');
         loadComponent('footer', '../component/footer.html');
-        // Update cart badge after header loads
-        setTimeout(updateCartBadge, 100);
     </script>
 </body>
 
