--- a/aboutus.html
+++ b/aboutus.html
@@ -64,53 +64,131 @@
     </section>
 
     <!-- Team Section -->
-    <section class="team-section container reveal" data-aos="fade-up">
+    <!-- Authors Section -->
+    <section class="authors-section container reveal" data-aos="fade-up">
         <div class="section-header center-text" data-aos="fade-up">
-            <h2>Meet the Minds</h2>
-            <p>The publishing professionals behind LAUNCELOT DU LAC.</p>
+            <span class="pill-badge">Our Talent</span>
+            <h2>Voices of Launcelot</h2>
+            <p>Diverse voices. Infinite worlds. Meet the creators shaping the future of storytelling.</p>
         </div>
 
-        <div class="team-grid">
-            <!-- Member 1 -->
-            <div class="team-card" data-aos="fade-up" data-aos-delay="50">
-                <div class="member-img">
-                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=400&q=80"
-                        alt="CEO">
-                    <div class="social-overlay">
-                        <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                    </div>
+        <div class="authors-grid">
+            <!-- Author 1 -->
+            <div class="author-card" data-aos="fade-up" data-aos-delay="50">
+                <div class="card-bg-blob blob-1"></div>
+                <div class="author-icon">
+                    <ion-icon name="planet-outline"></ion-icon>
                 </div>
-                <h3>James Carter</h3>
-                <span>Founder & CEO</span>
+                <span class="genre-badge sci-fi">Sci-Fi</span>
+                <h3>Elena Vance</h3>
+                <p class="key-work">Known for: <em>"The Quantum Paradox"</em></p>
+                <div class="card-footer">
+                    <span>12 Published Works</span>
+                </div>
+                <div class="author-hover-details">
+                    <h4>About Elena</h4>
+                    <p>A former astrophysicist turned storyteller, Elena weaves complex scientific theories into
+                        gripping narratives. Her works challenge our understanding of reality and the human condition in
+                        the face of the unknown.</p>
+                </div>
             </div>
 
-            <!-- Member 2 -->
-            <div class="team-card" data-aos="fade-up" data-aos-delay="150">
-                <div class="member-img">
-                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&w=400&q=80"
-                        alt="CTO">
-                    <div class="social-overlay">
-                        <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-github"></ion-icon></a>
-                    </div>
+            <!-- Author 2 -->
+            <div class="author-card" data-aos="fade-up" data-aos-delay="100">
+                <div class="card-bg-blob blob-2"></div>
+                <div class="author-icon">
+                    <ion-icon name="hourglass-outline"></ion-icon>
                 </div>
-                <h3>Sarah Lin</h3>
-                <span>Head of Product</span>
+                <span class="genre-badge history">Historical Fiction</span>
+                <h3>Marcus Thorne</h3>
+                <p class="key-work">Known for: <em>"Echoes of Rome"</em></p>
+                <div class="card-footer">
+                    <span>8 Published Works</span>
+                </div>
+                <div class="author-hover-details">
+                    <h4>About Marcus</h4>
+                    <p>Marcus brings history to life with meticulous research and vivid prose. His novels transport
+                        readers to ancient civilizations, exploring the triumphs and tragedies that shaped our modern
+                        world.</p>
+                </div>
             </div>
 
-            <!-- Member 3 -->
-            <div class="team-card" data-aos="fade-up" data-aos-delay="250">
-                <div class="member-img">
-                    <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&w=400&q=80"
-                        alt="Designer">
-                    <div class="social-overlay">
-                        <a href="#"><ion-icon name="logo-dribbble"></ion-icon></a>
-                        <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                    </div>
+            <!-- Author 3 -->
+            <div class="author-card" data-aos="fade-up" data-aos-delay="150">
+                <div class="card-bg-blob blob-3"></div>
+                <div class="author-icon">
+                    <ion-icon name="leaf-outline"></ion-icon>
                 </div>
-                <h3>Michael Ross</h3>
-                <span>Lead Designer</span>
+                <span class="genre-badge self-help">Self-Help</span>
+                <h3>Sophia Chen</h3>
+                <p class="key-work">Known for: <em>"Mindful Living"</em></p>
+                <div class="card-footer">
+                    <span>5 Published Works</span>
+                </div>
+                <div class="author-hover-details">
+                    <h4>About Sophia</h4>
+                    <p>Sophia's practical wisdom and compassionate voice have guided millions toward a more balanced
+                        life. She combines ancient philosophy with modern psychology to help readers find peace in
+                        chaos.</p>
+                </div>
+            </div>
+
+            <!-- Author 4 -->
+            <div class="author-card" data-aos="fade-up" data-aos-delay="200">
+                <div class="card-bg-blob blob-1"></div>
+                <div class="author-icon">
+                    <ion-icon name="finger-print-outline"></ion-icon>
+                </div>
+                <span class="genre-badge mystery">Mystery / Thriller</span>
+                <h3>David Blackwood</h3>
+                <p class="key-work">Known for: <em>"The Silent Witness"</em></p>
+                <div class="card-footer">
+                    <span>15 Published Works</span>
+                </div>
+                <div class="author-hover-details">
+                    <h4>About David</h4>
+                    <p>Master of suspense, David crafts intricate puzzles that keep readers guessing until the final
+                        page. His psychological thrillers delve deep into the darker corners of the human psyche.</p>
+                </div>
+            </div>
+
+            <!-- Author 5 -->
+            <div class="author-card" data-aos="fade-up" data-aos-delay="250">
+                <div class="card-bg-blob blob-2"></div>
+                <div class="author-icon">
+                    <ion-icon name="color-wand-outline"></ion-icon>
+                </div>
+                <span class="genre-badge fantasy">Fantasy</span>
+                <h3>Aria Nightshade</h3>
+                <p class="key-work">Known for: <em>"Realm of Shadows"</em></p>
+                <div class="card-footer">
+                    <span>9 Published Works</span>
+                </div>
+                <div class="author-hover-details">
+                    <h4>About Aria</h4>
+                    <p>Aria constructs sprawling magical worlds filled with mythical beasts and epic quests. Her stories
+                        celebrate the power of imagination and the enduring struggle between light and darkness.</p>
+                </div>
+            </div>
+
+            <!-- Author 6 -->
+            <div class="author-card" data-aos="fade-up" data-aos-delay="300">
+                <div class="card-bg-blob blob-3"></div>
+                <div class="author-icon">
+                    <ion-icon name="hardware-chip-outline"></ion-icon>
+                </div>
+                <span class="genre-badge tech">Science & Tech</span>
+                <h3>Dr. Robert Lang</h3>
+                <p class="key-work">Known for: <em>"Future Horizons"</em></p>
+                <div class="card-footer">
+                    <span>6 Published Works</span>
+                </div>
+                <div class="author-hover-details">
+                    <h4>About Robert</h4>
+                    <p>A visionary futurist, Dr. Lang explores the intersection of technology and humanity. His
+                        non-fiction works provide a roadmap for navigating the challenges and opportunities of the
+                        digital age.</p>
+                </div>
             </div>
         </div>
     </section>
