--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="cat-icon c-1">
                     <ion-icon name="bulb-outline"></ion-icon>
                 </div>
-                <h3>Sci-fi</h3>
+                <h3>Sci-Fi</h3>
                 <p>Sharpen your mind.</p>
                 <div class="cat-arrow"><ion-icon name="arrow-forward"></ion-icon></div>
             </a>
@@ -408,7 +408,7 @@
                     </div>
                 </div>
 
-              
+
             </div>
         </div>
     </section>
